Fix stretch images issue on safari.

--- a/src/App.scss
+++ b/src/App.scss
@@ -345,6 +345,10 @@ header h1 {
 	padding-bottom: 5%;
 }
 
+.foto {
+
+}
+
 .portfolio-item {
 	max-width: 100%;
 	margin-bottom: 15px;
